Update surefire fork settings